Implemantando Validação de Cadastro e Login

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="tecnologia.html"><span class="material-symbols-outlined" style="font-size: 24px; vertical-align: middle; margin: 5px;">emoji_objects</span>Solução</a></li>
                 <li><a href="praias.html"><span class="material-symbols-outlined" style="font-size: 24px; vertical-align: middle; margin: 5px;">beach_access</span>Praias</a></li>
                 <li><a href="beneficios.html"><span class="material-symbols-outlined" style="font-size: 24px; vertical-align: middle; margin:5px">sentiment_satisfied</span>Beneficios</a></li>
-                <li><a href="login.html"><span class="material-symbols-outlined" style="font-size: 24px; vertical-align: middle; margin:5px">person</span>Entrar</a></li>
+                <li><a href="validacao.html"><span class="material-symbols-outlined" style="font-size: 24px; vertical-align: middle; margin:5px">person</span>Cadastrar/Entrar</a></li>
             </ul>
         </nav>
     </header>
