Implemantando carrossel na seção praia

--- a/praias.html
+++ b/praias.html
@@ -105,6 +105,6 @@
             <p>Produzido em conjunto com <a href="https://www.fiap.com.br/graduacao/">Fiap</a></p> <!--parceria-->
         </nav>
     </footer>
-    <script src="praias.js"></script>
+    <script src="js/praias.js"></script>
 </body>
 </html>
